Layer neurons counter position center on collapsed layer fixed.

--- a/src/app/network/shared/hidden-layers/hidden-layer/hidden-layer.component.scss
+++ b/src/app/network/shared/hidden-layers/hidden-layer/hidden-layer.component.scss
@@ -80,6 +80,12 @@
         }
     }
 
+    .hidden-layer__neurons-amount {
+        font-size: 20px;
+        position: absolute;
+        margin-top: 20px;
+    }
+
     .hidden-layer__collapser {
         position: absolute;
         top: -2px;
